really getting in depth with react

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,7 +1,11 @@
 {
     "extends": [
         "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin: import/errors",
+        "plugin: jsx-a11y/recommended",
         "prettier"
+        
     ],
     "plugins": [],
     "parserOptions": {
