--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -4,10 +4,19 @@
         "plugin:react/recommended",
         "plugin: import/errors",
         "plugin: jsx-a11y/recommended",
+        "plugin: react-hooks/recommended",
         "prettier"
         
     ],
-    "plugins": [],
+    "rules": {
+        "react/prop-types": 0,
+        "react/react-in-jsx-scope": 0
+   },
+    "plugins": [
+        "react",
+        "import",
+        "jsx-a11y"
+    ],
     "parserOptions": {
         "ecmaVersion": 2022,
         "sourceType": "module",
@@ -19,5 +28,15 @@
         "browser": true,
         "node": true,
         "es6": true
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }, 
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx"]
+            }
+        }
     }
 }
